# ALGORITHMS

./: .gitignore  README.md
GOLANG/: chain-list.go
GOLANG/codewars/5kyu/: last_digit.go
GOLANG/codewars/6kyu/: backspaces.go
GOLANG/codewars/7kyu/: movie.go  sum_digits.go  unlucky_days.go
GOLANG/codewars/8kyu/: main.go  reverse_array_of_digits.go  reverse_string.go  toalternateCase.go
GOLANG/courses/advanced/: buffered_channels.go  channel_synchronization.go  channels.go  goroutines.go  unbuferred_channels.go
GOLANG/courses/basics/: arithmetic_operators.go  arrays.go  constants.go  data_types.go  defer.go  exit.go  for_as_while.go  for_loop.go  functions.go  hello  if_else.go  import.go  init.go  maps.go  multiple_return_values.go  naming_conventions.go  panic.go  range.go  recover.go  slices.go  switch_case.go  variables.go  variadic_functions.go
GOLANG/courses/intermediates/: closures.go  formatting_verbs.go  generics.go  interfaces.go  methods.go  pointers.go  structs.go
GOLANG/exercises/piscine/: piscine.go
GOLANG/myhttp/: client.go  go.mod  main.go
PYTHON/GameOfLife/: My_GOL.py
PYTHON/My_bots/: whatsapp.py
PYTHON/SpotiApp/: README.md  SpotiApp.py  main.py
PYTHON/reply_msg/: README.md  bad_bot.py  msg_insta.py
RUST/: Enregistrement de l’écran 2024-08-09 à 08.57.58.mov
RUST/blockchain_from_sratch/: Cargo.toml  README.md
RUST/blockchain_from_sratch/data/blocks/: db  snap.0000000000002124
RUST/blockchain_from_sratch/src/: block.rs  blockchain.rs  cli.rs  errors.rs  main.rs  transaction.rs
RUST/exercism_exercices/: rust
(+69 files in other folders)
